Create datasets folder, but not brand new

--- a/solar_dataset_preparation.ipynb
+++ b/solar_dataset_preparation.ipynb
@@ -96,11 +96,8 @@
       },
       "outputs": [],
       "source": [
-        "# Create a brand new folder to store the downloaded dataset\n",
+        "# Create new folder (if does not exist) to store the downloaded dataset\n",
         "if not os.path.exists(datasets_folder):\n",
-        "  os.mkdir(datasets_folder)\n",
-        "else:\n",
-        "  shutil.rmtree(datasets_folder)\n",
         "  os.mkdir(datasets_folder)"
       ]
     },
