Removed shutil import

--- a/solar_dataset_preparation.ipynb
+++ b/solar_dataset_preparation.ipynb
@@ -42,10 +42,9 @@
         "import os\n",
         "import shutil\n",
         "from urllib.request import urlretrieve\n",
-        "import zipfile\n",
         "import glob\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from google.colab import files # Ignore if not using Colab\n"
+        "from google.colab import files # Ignore if not using Colab"
       ]
     },
     {
