Now it saves the datasets to the drive

--- a/solar_dataset_preparation.ipynb
+++ b/solar_dataset_preparation.ipynb
@@ -44,7 +44,8 @@
         "from urllib.request import urlretrieve\n",
         "import glob\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from google.colab import files # Ignore if not using Colab"
+        "from google.colab import files # Ignore if not using Colab\n",
+        "from google.colab import drive # Ignore if not using Colab"
       ]
     },
     {
@@ -113,7 +114,7 @@
       "outputs": [],
       "source": [
         "# Download dataset (images_chips)\n",
-        "# Be patient...\n",
+        "# Be patient... Takes around 1 min with 250Mbps \n",
         "dataset_images_url = \"https://maxar-marketing.s3.amazonaws.com/product-samples/Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip\"\n",
         "dataset_images_path = os.path.join(datasets_folder, \"Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip\")\n",
         "urlretrieve(dataset_images_url, dataset_images_path)"
@@ -151,7 +152,7 @@
       "outputs": [],
       "source": [
         "# Download dataset (labels)\n",
-        "# Be patient...\n",
+        "# Be patient... Fast\n",
         "dataset_labels_url = \"https://figshare.com/ndownloader/files/39255599\"\n",
         "dataset_labels_path = os.path.join(datasets_folder, \"labels.zip\")\n",
         "urlretrieve(dataset_labels_url, dataset_labels_path)"
@@ -373,6 +374,25 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Zip final datasets\n",
+        "# Ignore if not using Colab\n",
+        "\n",
+        "# Train\n",
+        "!zip -q -r {train_folder+\".zip\"} {train_folder}\n",
+        "\n",
+        "# Validation\n",
+        "!zip -q -r {valid_folder+\".zip\"} {valid_folder}\n",
+        "\n",
+        "# Test\n",
+        "!zip -q -r {test_folder+\".zip\"} {test_folder}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -383,18 +403,39 @@
       },
       "outputs": [],
       "source": [
-        "# Zip and download the final datasets to your local machine\n",
+        "# Save the zip datasets on your drive\n",
+        "# Ignore if not using Colab\n",
+        "drive.mount(\"/content/drive\")\n",
+        "save_driver_folder = \"/content/drive/MyDrive/datasets\"\n",
+        "\n",
+        "if not os.path.exists(save_driver_folder):\n",
+        "  os.mkdir(save_driver_folder)\n",
+        "\n",
+        "# Train\n",
+        "!cp {train_folder+\".zip\"} {save_driver_folder}\n",
+        "\n",
+        "# Validation\n",
+        "!cp {valid_folder+\".zip\"} {save_driver_folder}\n",
+        "\n",
+        "# Test\n",
+        "!cp {test_folder+\".zip\"} {save_driver_folder}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Download the final datasets to your local machine\n",
         "# Ignore if not using Colab\n",
         "# Train\n",
-        "!zip -q -r {train_folder+\".zip\"} {train_folder}\n",
         "files.download(train_folder+\".zip\")\n",
         "\n",
         "# Validation\n",
-        "!zip -q -r {valid_folder+\".zip\"} {valid_folder}\n",
         "files.download(valid_folder+\".zip\")\n",
         "\n",
         "# Test\n",
-        "!zip -q -r {test_folder+\".zip\"} {test_folder}\n",
         "files.download(test_folder+\".zip\")"
       ]
     }
