Removal intermediate files, deal with colab and local machine

--- a/solar_dataset_preparation.ipynb
+++ b/solar_dataset_preparation.ipynb
@@ -33,19 +33,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ELcSbM2tvLoO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Some libraries were ignored.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import shutil\n",
         "from urllib.request import urlretrieve\n",
         "import glob\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from google.colab import files # Ignore if not using Colab\n",
-        "from google.colab import drive # Ignore if not using Colab"
+        "try:\n",
+        "    from google.colab import files \n",
+        "    from google.colab import drive \n",
+        "except:\n",
+        "    print(\"Some libraries were ignored.\")"
       ]
     },
     {
@@ -59,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "9sbySaXktm7M"
       },
@@ -90,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "wk0ZcDqitm-r"
       },
@@ -103,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -111,10 +122,22 @@
         "id": "K_IkZ9gIxgXr",
         "outputId": "f156290c-c921-4d5e-f95d-9f43986b9598"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('datasets/Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip',\n",
+              " <http.client.HTTPMessage at 0x7f79d7ed91e0>)"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Download dataset (images_chips)\n",
-        "# Be patient... Takes around 1 min with 250Mbps \n",
+        "# Be patient... Takes around 4 min with 900Mbps to download 3.85GB \n",
         "dataset_images_url = \"https://maxar-marketing.s3.amazonaws.com/product-samples/Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip\"\n",
         "dataset_images_path = os.path.join(datasets_folder, \"Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip\")\n",
         "urlretrieve(dataset_images_url, dataset_images_path)"
@@ -122,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -134,6 +157,7 @@
       "source": [
         "# Unzip dataset (images_chips)\n",
         "# Quiet and overwrite\n",
+        "# Be patient... Takes around 2 min to unzip\n",
         "!unzip -q -o {dataset_images_path} -d {datasets_folder}\n",
         "os.remove(dataset_images_path)\n",
         "os.remove(os.path.join(datasets_folder, \"README_ImageChips.txt\"))"
@@ -141,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -149,7 +173,18 @@
         "id": "XXYcR_a1KgiX",
         "outputId": "49440b7c-9058-4cce-cb81-d219665dd048"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('datasets/labels.zip', <http.client.HTTPMessage at 0x7f79d7cd9f90>)"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Download dataset (labels)\n",
         "# Be patient... Fast\n",
@@ -160,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -178,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "rBrO_Gcd3DlO"
       },
@@ -197,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -205,7 +240,16 @@
         "id": "Qd5BJ0qfHSjx",
         "outputId": "d2e5db44-87e9-4b3b-90b1-8bb990f76ca4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of images files: 2542\n",
+            "Number of labels files: 2542\n"
+          ]
+        }
+      ],
       "source": [
         "# Check if number of images files match labels files\n",
         "images_list = glob.glob(os.path.join(images_folder, '*'))\n",
@@ -220,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "TwpxnkiaNoBw"
       },
@@ -234,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "gk0EAyv1Npl2"
       },
@@ -249,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "Vx8dBTwVNp3A"
       },
@@ -269,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "skuk2FuqPI91"
       },
@@ -290,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "TH7nfb9QO4ci"
       },
@@ -315,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -323,7 +367,16 @@
         "id": "y47okIbKQHei",
         "outputId": "47538029-2ab4-4c35-e2ed-43e2413e63fe"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of images files: 2542\n",
+            "Number of labels files: 2542\n"
+          ]
+        }
+      ],
       "source": [
         "# Check if number of images files match labels files\n",
         "# Images\n",
@@ -345,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "Gko02OueQHtp"
       },
@@ -373,13 +426,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Zip final datasets\n",
-        "# Ignore if not using Colab\n",
-        "\n",
+        "# Be patient... Takes around 2 min to zip\n",
         "# Train\n",
         "!zip -q -r {train_folder+\".zip\"} {train_folder}\n",
         "\n",
@@ -392,7 +444,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Saving to drive ignored.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Save the zip datasets on your drive\n",
+        "try:\n",
+        "    drive.mount(\"/content/drive\")\n",
+        "    save_driver_folder = \"/content/drive/MyDrive/datasets\"\n",
+        "    if not os.path.exists(save_driver_folder):\n",
+        "        os.mkdir(save_driver_folder)\n",
+        "    # Train\n",
+        "    !cp {train_folder+\".zip\"} {save_driver_folder}\n",
+        "\n",
+        "    # Validation\n",
+        "    !cp {valid_folder+\".zip\"} {save_driver_folder}\n",
+        "\n",
+        "    # Test\n",
+        "    !cp {test_folder+\".zip\"} {save_driver_folder}\n",
+        "except:\n",
+        "    print(\"Saving to drive ignored.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -401,24 +485,43 @@
         "id": "riNOaHhgQIvI",
         "outputId": "8af49d75-773c-4d35-91f1-08c2e9f11231"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Download to local machine ignored.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Download the final datasets to your local machine\n",
+        "try:\n",
+        "    # Train\n",
+        "    files.download(train_folder+\".zip\")\n",
+        "\n",
+        "    # Validation\n",
+        "    files.download(valid_folder+\".zip\")\n",
+        "\n",
+        "    # Test\n",
+        "    files.download(test_folder+\".zip\")\n",
+        "except:\n",
+        "    print(\"Download to local machine ignored.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Save the zip datasets on your drive\n",
-        "# Ignore if not using Colab\n",
-        "drive.mount(\"/content/drive\")\n",
-        "save_driver_folder = \"/content/drive/MyDrive/datasets\"\n",
-        "\n",
-        "if not os.path.exists(save_driver_folder):\n",
-        "  os.mkdir(save_driver_folder)\n",
-        "\n",
-        "# Train\n",
-        "!cp {train_folder+\".zip\"} {save_driver_folder}\n",
-        "\n",
-        "# Validation\n",
-        "!cp {valid_folder+\".zip\"} {save_driver_folder}\n",
-        "\n",
-        "# Test\n",
-        "!cp {test_folder+\".zip\"} {save_driver_folder}"
+        "# Delete remaining intermediate files and folders\n",
+        "if os.path.exists(\"datasets/image_chips\"):\n",
+        "        shutil.rmtree(\"datasets/image_chips\")\n",
+        "if os.path.exists(\"datasets/labels\"):\n",
+        "        shutil.rmtree(\"datasets/labels\")\n",
+        "if os.path.exists(\"datasets/Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip\"):\n",
+        "        os.remove(\"datasets/Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip\")\n"
       ]
     },
     {
@@ -426,18 +529,7 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "# Download the final datasets to your local machine\n",
-        "# Ignore if not using Colab\n",
-        "# Train\n",
-        "files.download(train_folder+\".zip\")\n",
-        "\n",
-        "# Validation\n",
-        "files.download(valid_folder+\".zip\")\n",
-        "\n",
-        "# Test\n",
-        "files.download(test_folder+\".zip\")"
-      ]
+      "source": []
     }
   ],
   "metadata": {
