Added the load of an existing model from drive

--- a/solar_panels_detection.ipynb
+++ b/solar_panels_detection.ipynb
@@ -149,6 +149,20 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Mount drive\n",
+        "try:\n",
+        "  drive.mount(\"/content/drive\")\n",
+        "  save_driver_folder = \"/content/drive/MyDrive/datasets\"\n",
+        "except:\n",
+        "  print(\"Unable to mount drive.\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -160,8 +174,6 @@
       "source": [
         "# Copies the Train, Validation and Test saved on datasets folder from your Drive to this VM\n",
         "try:\n",
-        "  drive.mount(\"/content/drive\")\n",
-        "  save_driver_folder = \"/content/drive/MyDrive/datasets\"\n",
         "  # Train\n",
         "  !cp {save_driver_folder+\"/train.zip\"} {datasets_folder}\n",
         "\n",
@@ -317,7 +329,13 @@
       "outputs": [],
       "source": [
         "# Import best trained YOLO solar panels model\n",
-        "best_model = YOLO(\"runs/detect/train/weights/best.pt\")"
+        "try:\n",
+        "  best_model = YOLO(\"runs/detect/train/weights/best.pt\")\n",
+        "except:\n",
+        "  print(\"Loaded from drive.\")\n",
+        "  !cp {save_driver_folder+\"/solar_100epochs_-1batch_yolov8x_best.pt\"} {datasets_folder}\n",
+        "  best_model = YOLO(\"solar_100epochs_-1batch_yolov8x_best.pt\")\n",
+        "  "
       ]
     },
     {
@@ -347,7 +365,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
