Now shows random predicted images

--- a/solar_panels_detection.ipynb
+++ b/solar_panels_detection.ipynb
@@ -334,7 +334,7 @@
         "except:\n",
         "  print(\"Loaded from drive.\")\n",
         "  !cp {save_driver_folder+\"/solar_100epochs_-1batch_yolov8x_best.pt\"} {datasets_folder}\n",
-        "  best_model = YOLO(\"solar_100epochs_-1batch_yolov8x_best.pt\")\n",
+        "  best_model = YOLO(datasets_folder+\"/solar_100epochs_-1batch_yolov8x_best.pt\")\n",
         "  "
       ]
     },
