--- a/solar_panels_detection.ipynb
+++ b/solar_panels_detection.ipynb
@@ -65,6 +65,10 @@
         "import os\n",
         "import torch\n",
         "import yaml\n",
+        "import random\n",
+        "import glob\n",
+        "import cv2\n",
+        "from matplotlib import pyplot as plt\n",
         "try:\n",
         "    from google.colab import files\n",
         "    from google.colab import drive\n",
@@ -152,6 +156,24 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Check if GPU is available\n",
+        "if torch.cuda.is_available():\n",
+        "  print(\"GPU available.\")\n",
+        "  torch.cuda.set_device(0)\n",
+        "  device = 0 # Single GPU, it has support for multiple\n",
+        "else:\n",
+        "  print(\"GPU not available, using CPU.\")\n",
+        "  print(\"On Colab, go to: Edit > Notebook Settings > Hardware Accelerator > Select T4 GPU\")\n",
+        "  torch.cuda.set_device(-1)\n",
+        "  device = \"cpu\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# Mount drive\n",
         "try:\n",
         "  drive.mount(\"/content/drive\")\n",
@@ -206,30 +228,6 @@
         "# Test\n",
         "!unzip -q -o {datasets_folder+\"/test.zip\"} -d {datasets_folder}\n",
         "os.remove(datasets_folder+\"/test.zip\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AA8A4FJz0eQG",
-        "outputId": "271edac2-2a0d-4c9b-d4f7-277b1d3cc770"
-      },
-      "outputs": [],
-      "source": [
-        "# Check if GPU is available\n",
-        "if torch.cuda.is_available():\n",
-        "  print(\"GPU available.\")\n",
-        "  torch.cuda.set_device(0)\n",
-        "  device = 0 # Single GPU, it has support for multiple\n",
-        "else:\n",
-        "  print(\"GPU not available, using CPU.\")\n",
-        "  print(\"On Colab, go to: Edit > Notebook Settings > Hardware Accelerator > Select T4 GPU\")\n",
-        "  torch.cuda.set_device(-1)\n",
-        "  device = \"cpu\""
       ]
     },
     {
@@ -346,12 +344,35 @@
       },
       "outputs": [],
       "source": [
-        "# Try the new model on the Test dataset\n",
+        "# Try the new model the Test dataset\n",
         "test_images_folder = os.path.join(datasets_folder, \"test\", \"images\")\n",
         "test_results = best_model.predict(source=test_images_folder, imgsz=image_size, conf=conf_thr,\n",
         "                                  iou=iou_thr, device=device, show_labels=False,\n",
         "                                  show_conf=False, save=True)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Open and show random predicted images\n",
+        "predict_images = glob.glob(os.path.join(\"runs\", \"detect\", \"predict\", \"*.tif\"))\n",
+        "rand_index = random.randint(0, len(predict_images)-1)\n",
+        "predict_image_path = predict_images[rand_index]\n",
+        "\n",
+        "image_bgr = cv2.imread(predict_image_path)\n",
+        "image_rgb = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2RGB)\n",
+        "plt.imshow(image_rgb)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
