Solved problem with paths on datasets

--- a/solar_dataset_preparation.ipynb
+++ b/solar_dataset_preparation.ipynb
@@ -33,19 +33,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "ELcSbM2tvLoO"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Some libraries were ignored.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
         "import shutil\n",
@@ -70,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "9sbySaXktm7M"
       },
@@ -101,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "wk0ZcDqitm-r"
       },
@@ -114,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,19 +114,7 @@
         "id": "K_IkZ9gIxgXr",
         "outputId": "f156290c-c921-4d5e-f95d-9f43986b9598"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "('datasets/Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip',\n",
-              " <http.client.HTTPMessage at 0x7f79d7ed91e0>)"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Download dataset (images_chips)\n",
         "# Be patient... Takes around 4 min with 900Mbps to download 3.85GB \n",
@@ -145,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -173,18 +153,7 @@
         "id": "XXYcR_a1KgiX",
         "outputId": "49440b7c-9058-4cce-cb81-d219665dd048"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "('datasets/labels.zip', <http.client.HTTPMessage at 0x7f79d7cd9f90>)"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Download dataset (labels)\n",
         "# Be patient... Fast\n",
@@ -195,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -213,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "rBrO_Gcd3DlO"
       },
@@ -232,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -240,16 +209,7 @@
         "id": "Qd5BJ0qfHSjx",
         "outputId": "d2e5db44-87e9-4b3b-90b1-8bb990f76ca4"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Number of images files: 2542\n",
-            "Number of labels files: 2542\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Check if number of images files match labels files\n",
         "images_list = glob.glob(os.path.join(images_folder, '*'))\n",
@@ -264,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "TwpxnkiaNoBw"
       },
@@ -278,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "gk0EAyv1Npl2"
       },
@@ -293,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "Vx8dBTwVNp3A"
       },
@@ -313,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "skuk2FuqPI91"
       },
@@ -334,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "TH7nfb9QO4ci"
       },
@@ -359,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -367,16 +327,7 @@
         "id": "y47okIbKQHei",
         "outputId": "47538029-2ab4-4c35-e2ed-43e2413e63fe"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Number of images files: 2542\n",
-            "Number of labels files: 2542\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Check if number of images files match labels files\n",
         "# Images\n",
@@ -398,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "Gko02OueQHtp"
       },
@@ -426,35 +377,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Zip final datasets\n",
         "# Be patient... Takes around 2 min to zip\n",
         "# Train\n",
-        "!zip -q -r {train_folder+\".zip\"} {train_folder}\n",
+        "!cd {train_folder} && zip -q -r {\"../train.zip\"} *\n",
         "\n",
         "# Validation\n",
-        "!zip -q -r {valid_folder+\".zip\"} {valid_folder}\n",
+        "!cd {valid_folder} && zip -q -r {\"../validation.zip\"} *\n",
         "\n",
         "# Test\n",
-        "!zip -q -r {test_folder+\".zip\"} {test_folder}"
+        "!cd {test_folder} && zip -q -r {\"../test.zip\"} *"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Saving to drive ignored.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Save the zip datasets on your drive\n",
         "try:\n",
@@ -476,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -485,15 +428,7 @@
         "id": "riNOaHhgQIvI",
         "outputId": "8af49d75-773c-4d35-91f1-08c2e9f11231"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Download to local machine ignored.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Download the final datasets to your local machine\n",
         "try:\n",
@@ -511,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
