--- a/solar_dataset_preparation.ipynb
+++ b/solar_dataset_preparation.ipynb
@@ -33,11 +33,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ELcSbM2tvLoO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Some libraries were ignored.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import shutil\n",
@@ -62,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "9sbySaXktm7M"
       },
@@ -93,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "wk0ZcDqitm-r"
       },
@@ -106,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -114,7 +122,19 @@
         "id": "K_IkZ9gIxgXr",
         "outputId": "f156290c-c921-4d5e-f95d-9f43986b9598"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('datasets/Maxar_HD_and_Native_Solar_Panel_Image_Chips.zip',\n",
+              " <http.client.HTTPMessage at 0x7fd698467b20>)"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Download dataset (images_chips)\n",
         "# Be patient... Takes around 4 min with 900Mbps to download 3.85GB \n",
@@ -125,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -145,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,7 +173,18 @@
         "id": "XXYcR_a1KgiX",
         "outputId": "49440b7c-9058-4cce-cb81-d219665dd048"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('datasets/labels.zip', <http.client.HTTPMessage at 0x7fd6984b49d0>)"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Download dataset (labels)\n",
         "# Be patient... Fast\n",
@@ -164,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -182,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "rBrO_Gcd3DlO"
       },
@@ -201,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -209,7 +240,16 @@
         "id": "Qd5BJ0qfHSjx",
         "outputId": "d2e5db44-87e9-4b3b-90b1-8bb990f76ca4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of images files: 2542\n",
+            "Number of labels files: 2542\n"
+          ]
+        }
+      ],
       "source": [
         "# Check if number of images files match labels files\n",
         "images_list = glob.glob(os.path.join(images_folder, '*'))\n",
@@ -224,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "TwpxnkiaNoBw"
       },
@@ -238,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "gk0EAyv1Npl2"
       },
@@ -253,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "Vx8dBTwVNp3A"
       },
@@ -273,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "skuk2FuqPI91"
       },
@@ -294,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "TH7nfb9QO4ci"
       },
@@ -319,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -327,7 +367,16 @@
         "id": "y47okIbKQHei",
         "outputId": "47538029-2ab4-4c35-e2ed-43e2413e63fe"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of images files: 2542\n",
+            "Number of labels files: 2542\n"
+          ]
+        }
+      ],
       "source": [
         "# Check if number of images files match labels files\n",
         "# Images\n",
@@ -349,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "Gko02OueQHtp"
       },
@@ -377,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -395,9 +444,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Saving to drive ignored.\n"
+          ]
+        }
+      ],
       "source": [
         "# Save the zip datasets on your drive\n",
         "try:\n",
@@ -419,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -428,7 +485,15 @@
         "id": "riNOaHhgQIvI",
         "outputId": "8af49d75-773c-4d35-91f1-08c2e9f11231"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Download to local machine ignored.\n"
+          ]
+        }
+      ],
       "source": [
         "# Download the final datasets to your local machine\n",
         "try:\n",
@@ -446,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
