--- a/solar_panels_detection.ipynb
+++ b/solar_panels_detection.ipynb
@@ -218,15 +218,15 @@
       "source": [
         "# Unzip the datasets\n",
         "# Train\n",
-        "!unzip -q -o {datasets_folder+\"/train.zip\"} -d {datasets_folder}\n",
+        "!unzip -q -o {datasets_folder+\"/train.zip\"} -d {datasets_folder+\"/train\"}\n",
         "os.remove(datasets_folder+\"/train.zip\")\n",
         "\n",
         "# Validation\n",
-        "!unzip -q -o {datasets_folder+\"/validation.zip\"} -d {datasets_folder}\n",
+        "!unzip -q -o {datasets_folder+\"/validation.zip\"} -d {datasets_folder+\"/validation\"}\n",
         "os.remove(datasets_folder+\"/validation.zip\")\n",
         "\n",
         "# Test\n",
-        "!unzip -q -o {datasets_folder+\"/test.zip\"} -d {datasets_folder}\n",
+        "!unzip -q -o {datasets_folder+\"/test.zip\"} -d {datasets_folder+\"/test\"}\n",
         "os.remove(datasets_folder+\"/test.zip\")"
       ]
     },
